now we display a chart!

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,10 +6,12 @@
     <title>Stock Ticker App</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <title>Hello World</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1 id="title">Hello World</h1>
+    <canvas id="chart" style="width:100%;max-width:700px"></canvas>
     <script src="/script.js" defer></script>
 </body>
 
