--- a/assets/index.html
+++ b/assets/index.html
@@ -3,16 +3,27 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Stock Ticker App</title>
+    <title>Stonks</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <title>Hello World</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
+    <title>Stonks</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"
+        integrity="sha512-4F1cxYdMiAW98oomSLaygEwmCnIP38pb4Kx70yQYqRwLVCs3DbRumfBq82T08g/4LJ/smbFGFpmeFlQgoDccgg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"
+        integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@2.0.0/dist/chartjs-plugin-crosshair.min.js"
+        integrity="sha256-5bTtdEYtbjO36pQbMCXOsoYW5u5jfYfyI41LelMTTbQ=" crossorigin="anonymous"
+        referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
-    <h1 id="title">Hello World</h1>
-    <canvas id="chart" style="width:100%;max-width:700px"></canvas>
-    <script src="/script.js" defer></script>
+    <h1 id="ticker"></h1>
+    <div id="chart-container">
+        <canvas id="chart"></canvas>
+    </div>
+    <script type="module" src="/script.js" defer></script>
 </body>
 
 </html>
