--- a/assets/index.html
+++ b/assets/index.html
@@ -6,16 +6,9 @@
     <title>Stonks</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <title>Stonks</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"
-        integrity="sha512-4F1cxYdMiAW98oomSLaygEwmCnIP38pb4Kx70yQYqRwLVCs3DbRumfBq82T08g/4LJ/smbFGFpmeFlQgoDccgg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"
-        integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@2.0.0/dist/chartjs-plugin-crosshair.min.js"
-        integrity="sha256-5bTtdEYtbjO36pQbMCXOsoYW5u5jfYfyI41LelMTTbQ=" crossorigin="anonymous"
-        referrerpolicy="no-referrer"></script>
+    <script src="moment-2.30.1.min.js"></script>
+    <script src="chart-4.4.1.min.js"></script>
+    <script src="chartjs-plugin-crosshair-2.0.0.min.js"></script>
 </head>
 
 <body>
@@ -23,7 +16,7 @@
     <div id="chart-container">
         <canvas id="chart"></canvas>
     </div>
-    <script type="module" src="/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
