added the possibility to pick the range

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,6 +13,13 @@
 
 <body>
     <h1 id="ticker"></h1>
+    <div id="periods">
+        <a class=period id="period-1mo">1M</a>
+        <a class=period id="period-6mo">6M</a>
+        <a class=period id="period-ytd">YTD</a>
+        <a class=period id="period-1y">1Y</a>
+        <a class=period id="period-5y">5Y</a>
+    </div>
     <div id="chart-container">
         <canvas id="chart"></canvas>
     </div>
